# gpm

./: Cargo.toml  Dockerfile  README.md  SETUP.md  build.rs  gpm.config.dev.toml  gpm.config.pi.toml  rustc-ice-2024-08-05T21_26_04-94046.txt  rustc-ice-2024-08-05T21_26_04-94047.txt  rustc-ice-2024-08-05T21_26_10-94105.txt  rustc-ice-2024-08-05T21_26_10-94106.txt  rustfmt.toml
.github/workflows/: build-for-pi.yml  build.yml  check-pr.yml  publish-release.yml
sgcp/: README.md
src/: config.rs  connection.rs  dispatchers.rs  exporter.rs  gpio_monitor.rs  haptics_controller.rs  macros.rs  main.rs  managers.rs  resources.rs  rustfmt.toml  server.rs  streaming.rs  telemetry.rs  utils.rs
src/config/: mod.rs
src/dispatchers/: emg.rs  gpio.rs  macros.rs  tcp.rs
src/dispatchers/emg/: actual.rs  mock.rs
src/dispatchers/gpio/: actual.rs  mock.rs
src/dispatchers/tcp/: connection.rs
src/gpio_monitor/: actual.rs  mock.rs
src/macros/: managers.rs  mod.rs  server.rs
src/managers/: adc.rs  bms.rs  emg.rs  macros.rs  maestro.rs  mod.rs  visualizer.rs
src/managers/emg/: actual.rs  adc.rs  mock.rs  mod.rs
src/managers/maestro/: actual.rs  mock.rs
src/managers/resources/: adc.rs  bms.rs  emg.rs  maestro.rs  mod.rs
src/managers/resources/emg/: adc.rs  mod.rs
src/resources/: bms.rs  common.rs  emg.rs  maestro.rs
src/resources/common/: adc.rs
src/resources/emg/: actual.rs  mock.rs
src/resources/maestro/: actual.rs  mock.rs
src/server/: connection.rs  macros.rs  mod.rs
src/streaming/: connection.rs
src/task_definitions/: bms.rs  mod.rs  servo.rs
src/taskdefs/: bms.rs  emg.rs  mod.rs  servo.rs  telemetry.rs
src/telemetry/: http.rs  mod.rs
