[package]
name = "gpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0"
bytes = "1"
psutil = "3.3"
raestro = { version = "0.5.0", optional = true }
prost = "0.12"
prost-types = "0.12"
chrono = { version = "0.4.38", features = ["serde"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.3"
prometheus-client = "0.22.3"
sysinfo = "0.31.2"
rppal = { version = "0.19.0", optional = true }
console-subscriber = { version = "0.4.0", optional = true }
mcp3008 = "1.0.0"
spidev = "0.7.0"
embedded-hal = "1.0.0"
linux-embedded-hal = "0.4.0"
plotpy = "1.13.0"

[build-dependencies]
prost-build = { version = "0.12" }

[features]
pi = ["dep:raestro", "dep:rppal"]
dev = ["dep:console-subscriber"]
